# music-corn

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5b1d89589c33_add_discovered_podcasts_table.py  d0ac71e7cd13_initial_schema_sources_content_items_.py
docs/: ARCHITECTURE.md
src/music_corn/: __init__.py  cli.py  config.py
src/music_corn/db/: models.py  session.py
src/music_corn/discovery/: models.py  ranking.py  service.py
src/music_corn/discovery/clients/: listennotes.py  podcastindex.py
src/music_corn/extraction/: extractor.py  spotify_resolver.py
src/music_corn/pipeline/: ingest.py  scheduler.py  weekly.py
src/music_corn/podcast/: audio_assembler.py  script_writer.py  tts.py
src/music_corn/recommendation/: engine.py
src/music_corn/sources/: base.py  registry.py
src/music_corn/sources/plugins/: dlf_plugin.py  rss_plugin.py  youtube_plugin.py
src/music_corn/taste/: profiler.py  spotify_client.py
