[project]
name = "music-corn"
version = "0.1.0"
description = "AI-powered personalized music discovery system"
readme = "README.md"
authors = [
    { name = "Vladislav Sabolotny", email = "vladislav.sabolotny@ecog.io" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "feedparser>=6.0",
    "httpx>=0.28",
    "typer>=0.15",
    "anthropic>=0.52",
    "pydub>=0.25",
    "structlog>=24.4",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[project.scripts]
music-corn = "music_corn.cli:app"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
